--- a/src/styles/hexagon.css
+++ b/src/styles/hexagon.css
@@ -1,11 +1,10 @@
 @import "var.css";
 
 .hexagon {
-  width: 405px;
-  height: 72px;
   position: relative;
   width: min-content;
   cursor: pointer;
+  justify-content: center;
 }
 
 .hexagon:hover svg path {
@@ -14,7 +13,7 @@
 
 .hexagon svg:nth-child(1) {
   height: 2px;
-  width: 10px;
+  width: 10%;
 }
 
 .hexagon svg:nth-child(2) {
@@ -23,7 +22,7 @@
 
 .hexagon svg:nth-child(3) {
   height: 2px;
-  width: 10px;
+  width: 10%;
 }
 
 .hexagon--selected svg path {
@@ -44,6 +43,6 @@
 .hexagon__content {
   position: absolute;
   top: 50%;
-  left: 18%;
+  left: 28%;
   transform: translate(-50%, -50%);
 }
