--- a/src/styles/answer.css
+++ b/src/styles/answer.css
@@ -1,12 +1,12 @@
 @import "var.css";
 
 .answer h1 {
-  font-size: 20px;
+  font-size: 1.4rem;
   color: var(--orange-100);
   margin-right: 8px;
 }
 
 .answer p {
   text-align: center;
-  line-height: 20px;
+  line-height: 1.4rem;
 }
