--- a/src/styles/questionsCard.css
+++ b/src/styles/questionsCard.css
@@ -1,3 +1,7 @@
+#question-card {
+  height: 100%;
+}
+
 .question-card {
   /* height: 60%;
   margin: 10%; */
@@ -6,11 +10,12 @@
   height: 100%;
   justify-content: space-around !important;
   background-color: var(--gray-90);
+  z-index: 10;
 }
 
 .question-card > span {
-  top: 3rem;
-  right: 3rem;
+  top: 1.5rem;
+  right: 1.5rem;
   position: absolute;
   display: none;
 }
@@ -33,5 +38,17 @@
     margin-bottom: 3.5rem;
     max-width: 100%;
     text-align: center;
+  }
+
+  .question-card--show {
+    display: block;
+  }
+
+  .question-card--hide {
+    display: none;
+  }
+
+  .question-card > span {
+    display: block;
   }
 }
