--- a/src/styles/answer.css
+++ b/src/styles/answer.css
@@ -1,5 +1,9 @@
 @import "var.css";
 
+.answer {
+  justify-content: center;
+}
+
 .answer h1 {
   font-size: 1.4rem;
   color: var(--orange-100);
@@ -9,4 +13,52 @@
 .answer p {
   text-align: center;
   line-height: 1.4rem;
+}
+
+@media screen and (max-width: 768px) {
+  .answer h1 {
+    font-size: 3rem;
+    margin: 0 1.2rem 0 0;
+  }
+
+  .answer p {
+    margin: 0;
+    font-size: 2.1rem;
+    margin-bottom: 0.82rem;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .answer h1 {
+    font-size: 2.3rem;
+    margin: 0 1.2rem 0 0;
+  }
+
+  .answer p {
+    margin: 0;
+    font-size: 1.55rem;
+    margin-bottom: 0.523rem;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .answer h1 {
+    font-size: 1.4rem;
+    margin: 0 0.6rem 0 0;
+  }
+
+  .answer p {
+    margin: 0;
+    font-size: 1.05rem;
+    margin-bottom: 0.05rem;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+}
+
+@media screen and (min-width: 1440px) {
+}
+
+@media screen and (min-width: 2560px) {
 }
