--- a/src/styles/button.css
+++ b/src/styles/button.css
@@ -23,7 +23,67 @@
 
 .button p {
   font-weight: 600;
-  font-size: 20px;
+  font-size: 1.55em;
   line-height: 23.2px;
   color: var(--white-100);
+}
+
+@media screen and (max-width: 768px) {
+  .button {
+    border-radius: 0.7rem;
+  }
+
+  .button p {
+    font-size: 1.9rem;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .button {
+    border-radius: 0.5rem;
+  }
+
+  .button p {
+    font-size: 1.33rem;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .button {
+    border-radius: 0.5rem;
+  }
+
+  .button p {
+    font-size: 1rem;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .button {
+    border-radius: 0.7rem;
+  }
+
+  .button p {
+    font-size: 1.2rem;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .button {
+    border-radius: 0.7rem;
+  }
+
+  .button p {
+    font-size: 1.6rem;
+  }
+}
+
+@media screen and (min-width: 2560px) {
+  .button {
+    border-radius: 1.3rem;
+  }
+
+  .button p {
+    font-size: 2.4rem;
+  }
 }
