--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,14 +3,14 @@
 }
 
 body {
-  height: 100vh;
   width: 100vw;
+  height: 100vh;
   padding: 0;
   margin: 0;
 }
 #container {
-  height: 100%;
-  width: 100%;
+  width: 100vw;
+  height: 100vh;
 }
 
 .grid-x-center {
@@ -46,6 +46,7 @@ body {
 }
 
 .game-container {
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   display: flex;
 }
