--- a/src/styles/answer.css
+++ b/src/styles/answer.css
@@ -41,6 +41,19 @@
   }
 }
 
+@media screen and (max-width: 375px) {
+  .answer h1 {
+    font-size: 1.8rem;
+    margin: 0 0.6rem 0 0;
+  }
+
+  .answer p {
+    margin: 0;
+    font-size: 1.2rem;
+    margin-bottom: 0.15rem;
+  }
+}
+
 @media screen and (max-width: 320px) {
   .answer h1 {
     font-size: 1.4rem;
@@ -55,10 +68,38 @@
 }
 
 @media screen and (min-width: 1024px) {
+  .answer h1 {
+    font-size: 2rem;
+    margin: 0 0.8rem 0 0;
+  }
+
+  .answer p {
+    margin: 0;
+    font-size: 1.4rem;
+    margin-bottom: 0.34rem;
+  }
 }
 
 @media screen and (min-width: 1440px) {
+  .answer h1 {
+    font-size: 2.4rem;
+    margin: 0 1rem 0 0;
+  }
+
+  .answer p {
+    font-size: 1.7rem;
+    margin-bottom: 0.5rem;
+  }
 }
 
 @media screen and (min-width: 2560px) {
+  .answer h1 {
+    font-size: 4.4rem;
+    margin: 0 1.7rem 0 0;
+  }
+
+  .answer p {
+    font-size: 2.6rem;
+    margin-bottom: 1.45rem;
+  }
 }
