--- a/src/styles/menuGame.css
+++ b/src/styles/menuGame.css
@@ -3,65 +3,44 @@
 #menu-game {
   height: 100%;
 }
-
 .menu-game {
-  /* width: 40rem; */
+  width: 30vw;
   height: 100%;
   background-color: var(--white-100);
-
   height: 100%;
   position: relative;
   justify-content: center;
 }
-
 .menu-game > span {
   top: 1.5rem;
   right: 1.5rem;
   position: absolute;
   display: none;
-}
-
-.menu-game > span {
-  top: 1.5rem;
-  right: 1.5rem;
-  position: absolute;
   cursor: pointer;
 }
-
 .menu-game ul {
   width: 100%;
   list-style-type: none;
   padding: 0;
   margin: 0;
 }
-
 .menu-game li {
   padding: 0;
   margin: 0;
-
   height: 3rem;
-
   margin: 0.3rem 0;
 }
-
-.menu-game .hexagon {
-  /* width: 100%; */
-}
-
 .menu-game .hexagon svg:nth-child(1) {
   height: 0.3rem;
   width: 9.615rem;
 }
-
 .menu-game .hexagon svg:nth-child(2) {
   height: 2.4rem;
 }
-
 .menu-game .hexagon svg:nth-child(3) {
   height: 0.3rem;
   width: 9.615rem;
 }
-
 .menu-game .hexagon__content {
   position: absolute;
   top: 50%;
@@ -71,8 +50,42 @@
 
 @media screen and (max-width: 768px) {
   .menu-game {
+    width: 100vw;
+  }
+  .menu-game .hexagon {
+    width: 100%;
+  }
+  .menu-game > span {
+    top: 3rem;
+    right: 3rem;
+  }
+  .menu-game > span > svg {
+    width: 3rem;
+  }
+  .menu-game li {
+    padding: 0;
+    margin: 0.3rem 0;
+  }
+  .menu-game li {
+    height: 6rem;
+  }
+  .menu-game .hexagon svg:nth-child(1) {
+    height: 0.1rem;
+    width: 12.615rem;
+  }
+  .menu-game .hexagon svg:nth-child(2) {
+    height: 5rem;
+  }
+  .menu-game .hexagon svg:nth-child(3) {
+    height: 0.1rem;
+    width: 12.615rem;
+  }
+  .menu-game .hexagon__content p {
+    font-size: 2.4rem;
+  }
+
+  .menu-game {
     display: none;
-    /* display: block; */
   }
 
   .menu-game--show {
@@ -85,5 +98,114 @@
 
   .menu-game > span {
     display: block;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .menu-game > span {
+    top: 3rem;
+    right: 2rem;
+  }
+
+  .menu-game > span svg {
+    width: 2rem;
+  }
+
+  .menu-game .hexagon svg:nth-child(1) {
+    height: 0.1rem;
+    width: 7.615rem;
+  }
+
+  .menu-game .hexagon svg:nth-child(2) {
+    height: 2.6rem;
+  }
+
+  .menu-game .hexagon svg:nth-child(3) {
+    height: 0.1rem;
+    width: 7.615rem;
+  }
+
+  .menu-game .hexagon__content p {
+    font-size: 1.4rem;
+  }
+
+  .menu-game li {
+    height: 3rem;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .menu-game > span {
+    top: 2rem;
+    right: 2.5rem;
+  }
+
+  .menu-game > span svg {
+    height: 1.7rem;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .menu-game > span {
+    top: 2rem;
+    right: 2.5rem;
+  }
+
+  .menu-game > span svg {
+    height: 1.7rem;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .menu-game .hexagon svg:nth-child(1) {
+    height: 0.3rem;
+    width: 3.415rem;
+  }
+
+  .menu-game .hexagon svg:nth-child(2) {
+    height: 2.4rem;
+  }
+
+  .menu-game .hexagon svg:nth-child(3) {
+    height: 0.3rem;
+    width: 3.415rem;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .menu-game .hexagon svg:nth-child(1) {
+    height: 0.3rem;
+    width: 10.415rem;
+  }
+
+  .menu-game .hexagon svg:nth-child(2) {
+    height: 3rem;
+  }
+
+  .menu-game .hexagon svg:nth-child(3) {
+    height: 0.3rem;
+    width: 10.415rem;
+  }
+}
+
+@media screen and (min-width: 2560px) {
+  .menu-game li {
+    height: 6rem;
+  }
+  .menu-game .hexagon svg:nth-child(1) {
+    height: 0.7rem;
+    width: 13.415rem;
+  }
+
+  .menu-game .hexagon svg:nth-child(2) {
+    height: 5rem;
+  }
+
+  .menu-game .hexagon svg:nth-child(3) {
+    height: 0.7rem;
+    width: 13.415rem;
+  }
+  .menu-game .hexagon__content p {
+    font-size: 2.4rem;
   }
 }
